Add new specification and starts implementation
